--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
   <style id="accordion-style" type="text/css"></style>
-  <div id="accordion">aaa</div>
+  <div id="accordion"></div>
   <select class="form-control" id="select_area"></select>
   <div class="accordion" id="accordion3">
     <div class="accordion-group-top">
