--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   <select class="form-control" id="select_area"></select>
   <div class="accordion" id="accordion3">
     <div class="accordion-group-top">
+        <div class="accordion-inner">
+          <h3>※平成26年12月29日(月)、平成27年1月5日(月)容器包装プラスチックの収集</h3>
+          <h3>※詳しくは川本町の公式サイトをご覧ください。</h3>
+        </div>
       <div class="accordion-heading">
         <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_0">5374.jpについて</a>
       </div>
