--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="accordion-group-top">
         <div class="accordion-inner">
           <h3>※平成26年12月29日(月)、平成27年1月5日(月)容器包装プラスチックの収集</h3>
-          <h3>※詳しくは<a href="http://www.town.shimane-kawamoto.lg.jp/choumin/house_and_life/bunbetu_syusyu_2311.html">川本町の公式サイト</a>をご覧ください。</h3>
+          <h3>※詳しくは<a href="http://www.town.shimane-kawamoto.lg.jp/choumin/house_and_life/bunbetu_syusyu_2311.html" style=" color: #FF0000;text-decoration: underline;">川本町の公式サイト</a>をご覧ください。</h3>
         </div>
       <div class="accordion-heading">
         <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_0">5374.jpについて</a>
