--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div class="accordion-group-top">
         <div class="accordion-inner">
           <h3>※平成27年12月28日(月)、平成28年1月4日(月)容器包装プラスチックの収集</h3>
+          <h3>※平成27年12月29日(火)可燃ごみの収集</h3>
+          <h3>※平成27年12月30日（水）から平成28年1月3日（日）間はごみの収集なし</h3>
           <h3>※詳しくは<a href="http://www.town.shimane-kawamoto.lg.jp/files/original/20150224164508256.pdf"  target="_blank" style=" color: #FF0000;text-decoration: underline;">川本町の公式サイト</a>をご覧ください。</h3>
         </div>
       <div class="accordion-heading">
