--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <div class="accordion" id="accordion3">
     <div class="accordion-group-top">
         <div class="accordion-inner">
+          <h2>☆年末年始のごみ収集について</h3>
           <h3>※平成27年12月28日(月)、平成28年1月4日(月)容器包装プラスチックの収集</h3>
           <h3>※平成27年12月29日(火)可燃ごみの収集</h3>
           <h3>※平成27年12月30日（水）から平成28年1月3日（日）間はごみの収集なし</h3>
