--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="accordion-group-top">
         <div class="accordion-inner">
           <h2>☆年末年始のごみ収集について</h3>
-          <h3>※平成28年12月31日（土）から平成29年1月3日（火）間はごみの収集なし</h3>
-          <h3>※詳しくは<a href="http://www.town.shimane-kawamoto.lg.jp/files/original/201602191005373704725.pdf" target="_blank" style=" color: #FF0000;text-decoration: underline;">川本町の公式サイト</a>をご覧ください。</h3>
+          <h3>※平成29年12月30日（土）から平成30年1月3日（水）間はごみの収集なし</h3>
+<!--          <h3>※詳しくは<a href="http://www.town.shimane-kawamoto.lg.jp/files/original/201602191005373704725.pdf" target="_blank" style=" color: #FF0000;text-decoration: underline;">川本町の公式サイト</a>をご覧ください。</h3> -->
         </div>
       <div class="accordion-heading">
         <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_0">5374.jpについて</a>
